Изменили фон на бледно красный

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   font-family: "Raleway", sans-serif;
   font-size: 14px;
   color: #6c7279;
-  background-color: #fff;
+  background-color: rgb(180, 162, 162);
   -webkit-font-smoothing: antialiased;
 }
 
